argocd/manifests/trek/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trek
  namespace: trek
spec:
  selector:
    app: trek
  ports:
    - name: http
      port: 3000
      targetPort: http
