argocd/manifests/trek/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trek
  namespace: trek
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: trek.levangie.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trek
                port:
                  number: 3000
